Project-2/y.output
   0  $accept : program $end

   1  program : BEGIN stmts END

   2  stmts : stmt
   3        | stmt stmts

   4  stmt : matched_stmt SEMICOLON
   5       | unmatched_stmt SEMICOLON
   6       | non_if_stmt SEMICOLON

   7  matched_stmt : IF LP logical_expression RP stmts
   8               | ELIF LP logical_expression RP stmts
   9               | non_if_stmt

  10  unmatched_stmt : IF LP logical_expression RP stmts
  11                 | ELIF LP logical_expression RP stmts
  12                 | IF LP logical_expression RP matched_stmt ELSE LP unmatched_stmt RP

  13  non_if_stmt : loops non_if_stmt
  14              | arithmetic_operations non_if_stmt
  15              | function_call non_if_stmt
  16              | function_declaration non_if_stmt
  17              | declaration non_if_stmt
  18              | initialization non_if_stmt
  19              | declaration_and_initilization non_if_stmt
  20              | input_stmt non_if_stmt
  21              | output_stmt non_if_stmt
  22              | COMMENT non_if_stmt
  23              | LINE_COMMENT non_if_stmt
  24              | loops
  25              | arithmetic_operations
  26              | function_call
  27              | function_declaration
  28              | declaration
  29              | initialization
  30              | declaration_and_initilization
  31              | input_stmt
  32              | output_stmt
  33              | COMMENT
  34              | LINE_COMMENT

  35  loops : while_loop
  36        | for_loop
  37        | do_while_loop

  38  while_loop : WHILE LP logical_expression RP LCB stmts RCB

  39  for_loop : FOR LP loop_initialization SEMICOLON logical_expression SEMICOLON arithmetic_operations RP LCB stmts RCB

  40  do_while_loop : DO LCB stmts RCB WHILE LP logical_expression RP SEMICOLON

  41  loop_initialization : initialization
  42                      | declaration_and_initilization

  43  logical_expression : single_expression
  44                     | recursive_expression

  45  single_expression : term logical_operator term
  46                    | BOOL_STMT
  47                    | NOT BOOL_STMT

  48  recursive_expression : recursive_expression logical_connector single_expression
  49                       | single_expression

  50  term : var

  51  var : IDENTIFIER

  52  logical_connector : AND
  53                    | OR

  54  logical_operator : IS_EQUAL_OP
  55                   | NOT_EQUAL_OP
  56                   | NOT
  57                   | GT
  58                   | LT
  59                   | GTE
  60                   | LTE

  61  arithmetic_operations : addition
  62                        | subtraction
  63                        | division
  64                        | multiplication
  65                        | modulo
  66                        | power
  67                        | sqrt

  68  addition : addition PLUS term
  69           | term
  70           | LP addition RP

  71  subtraction : subtraction MINUS term
  72              | term
  73              | LP subtraction RP

  74  division : division DIVIDE_OP factor
  75           | factor
  76           | LP division RP

  77  multiplication : multiplication MULTIPLY_OP factor
  78                 | factor
  79                 | LP multiplication RP

  80  modulo : factor MOD_OP factor

  81  power : POW LP INT_STMT COMMA INT_STMT RP
  82        | POW LP INT_STMT COMMA DOUBLE_STMT RP
  83        | POW LP DOUBLE_STMT COMMA INT_STMT RP
  84        | POW LP DOUBLE_STMT COMMA DOUBLE_STMT RP

  85  constant_identifier : CONST term

  86  sign : PLUS
  87       | MINUS

  88  factor : term

  89  max : MAX LP INT_STMT COMMA INT_STMT RP
  90      | MAX LP DOUBLE_STMT COMMA DOUBLE_STMT RP

  91  min : MIN LP INT_STMT COMMA INT_STMT RP
  92      | MIN LP DOUBLE_STMT RP COMMA DOUBLE_STMT RP

  93  sqrt : SQUARE_ROOT LP INT_STMT RP
  94       | SQUARE_ROOT LP DOUBLE_STMT RP

  95  declaration : types term SEMICOLON
  96              | types constant_identifier SEMICOLON

  97  types : INT
  98        | DOUBLE
  99        | STRING
 100        | CHAR
 101        | BOOL

 102  function_call : CALL IDENTIFIER LP IDENTIFIER RP SEMICOLON

 103  function_types : types
 104                 | VOID

 105  initialization : term assignment_operator assignment_values SEMICOLON

 106  declaration_and_initilization : types term assignment_operator assignment_values SEMICOLON
 107                                | types constant_identifier SEMICOLON

 108  assignment_operator : ASSIGN_OP
 109                      | DIVIDE_ASSIGN_OP
 110                      | MULTIPLY_ASSIGN_OP
 111                      | MOD_ASSIGN_OP
 112                      | PLUS_ASSIGN_OP
 113                      | MINUS_ASSIGN_OP

 114  assignment_values : BOOL_STMT
 115                    | INT_STMT
 116                    | STRING_STMT
 117                    | DOUBLE_STMT
 118                    | CHAR_STMT

 119  input_stmt : EGG_IN LP input_context RP

 120  output_stmt : EGG_OUT LP output_context RP

 121  input_context : term PLUS input_context
 122                | term

 123  output_context : term
 124                 | assignment_values
 125                 | term PLUS output_context
 126                 | assignment_values PLUS output_context

 127  function_declaration : function_types IDENTIFIER LP parameter RP LCB stmts RCB
 128                       | function_types IDENTIFIER LP parameter RP LCB stmts RETURN assignment_values RCB
 129                       | function_types IDENTIFIER LP parameter RP LCB stmts RETURN VOID RCB

 130  parameter : parameter COMMA types IDENTIFIER
 131            | types IDENTIFIER

state 0
	$accept : . program $end  (0)

	BEGIN  shift 1
	.  error

	program  goto 2


state 1
	program : BEGIN . stmts END  (1)

	CALL  shift 3
	LP  shift 4
	EGG_IN  shift 5
	EGG_OUT  shift 6
	INT  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	CHAR  shift 10
	BOOL  shift 11
	IF  shift 12
	ELIF  shift 13
	FOR  shift 14
	WHILE  shift 15
	DO  shift 16
	VOID  shift 17
	POW  shift 18
	SQUARE_ROOT  shift 19
	IDENTIFIER  shift 20
	COMMENT  shift 21
	LINE_COMMENT  shift 22
	.  error

	stmts  goto 23
	stmt  goto 24
	matched_stmt  goto 25
	unmatched_stmt  goto 26
	non_if_stmt  goto 27
	loops  goto 28
	arithmetic_operations  goto 29
	function_call  goto 30
	function_declaration  goto 31
	declaration  goto 32
	initialization  goto 33
	declaration_and_initilization  goto 34
	input_stmt  goto 35
	output_stmt  goto 36
	while_loop  goto 37
	for_loop  goto 38
	do_while_loop  goto 39
	term  goto 40
	var  goto 41
	addition  goto 42
	subtraction  goto 43
	division  goto 44
	multiplication  goto 45
	modulo  goto 46
	power  goto 47
	sqrt  goto 48
	factor  goto 49
	types  goto 50
	function_types  goto 51


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	function_call : CALL . IDENTIFIER LP IDENTIFIER RP SEMICOLON  (102)

	IDENTIFIER  shift 52
	.  error


state 4
	addition : LP . addition RP  (70)
	subtraction : LP . subtraction RP  (73)
	division : LP . division RP  (76)
	multiplication : LP . multiplication RP  (79)

	LP  shift 4
	IDENTIFIER  shift 20
	.  error

	term  goto 53
	var  goto 41
	addition  goto 54
	subtraction  goto 55
	division  goto 56
	multiplication  goto 57
	factor  goto 58


state 5
	input_stmt : EGG_IN . LP input_context RP  (119)

	LP  shift 59
	.  error


state 6
	output_stmt : EGG_OUT . LP output_context RP  (120)

	LP  shift 60
	.  error


state 7
	types : INT .  (97)

	.  reduce 97


state 8
	types : DOUBLE .  (98)

	.  reduce 98


state 9
	types : STRING .  (99)

	.  reduce 99


state 10
	types : CHAR .  (100)

	.  reduce 100


state 11
	types : BOOL .  (101)

	.  reduce 101


state 12
	matched_stmt : IF . LP logical_expression RP stmts  (7)
	unmatched_stmt : IF . LP logical_expression RP stmts  (10)
	unmatched_stmt : IF . LP logical_expression RP matched_stmt ELSE LP unmatched_stmt RP  (12)

	LP  shift 61
	.  error


state 13
	matched_stmt : ELIF . LP logical_expression RP stmts  (8)
	unmatched_stmt : ELIF . LP logical_expression RP stmts  (11)

	LP  shift 62
	.  error


state 14
	for_loop : FOR . LP loop_initialization SEMICOLON logical_expression SEMICOLON arithmetic_operations RP LCB stmts RCB  (39)

	LP  shift 63
	.  error


state 15
	while_loop : WHILE . LP logical_expression RP LCB stmts RCB  (38)

	LP  shift 64
	.  error


state 16
	do_while_loop : DO . LCB stmts RCB WHILE LP logical_expression RP SEMICOLON  (40)

	LCB  shift 65
	.  error


state 17
	function_types : VOID .  (104)

	.  reduce 104


state 18
	power : POW . LP INT_STMT COMMA INT_STMT RP  (81)
	power : POW . LP INT_STMT COMMA DOUBLE_STMT RP  (82)
	power : POW . LP DOUBLE_STMT COMMA INT_STMT RP  (83)
	power : POW . LP DOUBLE_STMT COMMA DOUBLE_STMT RP  (84)

	LP  shift 66
	.  error


state 19
	sqrt : SQUARE_ROOT . LP INT_STMT RP  (93)
	sqrt : SQUARE_ROOT . LP DOUBLE_STMT RP  (94)

	LP  shift 67
	.  error


state 20
	var : IDENTIFIER .  (51)

	.  reduce 51


state 21
	non_if_stmt : COMMENT . non_if_stmt  (22)
	non_if_stmt : COMMENT .  (33)

	CALL  shift 3
	LP  shift 4
	EGG_IN  shift 5
	EGG_OUT  shift 6
	INT  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	CHAR  shift 10
	BOOL  shift 11
	FOR  shift 14
	WHILE  shift 15
	DO  shift 16
	VOID  shift 17
	POW  shift 18
	SQUARE_ROOT  shift 19
	IDENTIFIER  shift 20
	COMMENT  shift 21
	LINE_COMMENT  shift 22
	SEMICOLON  reduce 33
	ELSE  reduce 33

	non_if_stmt  goto 68
	loops  goto 28
	arithmetic_operations  goto 29
	function_call  goto 30
	function_declaration  goto 31
	declaration  goto 32
	initialization  goto 33
	declaration_and_initilization  goto 34
	input_stmt  goto 35
	output_stmt  goto 36
	while_loop  goto 37
	for_loop  goto 38
	do_while_loop  goto 39
	term  goto 40
	var  goto 41
	addition  goto 42
	subtraction  goto 43
	division  goto 44
	multiplication  goto 45
	modulo  goto 46
	power  goto 47
	sqrt  goto 48
	factor  goto 49
	types  goto 50
	function_types  goto 51


state 22
	non_if_stmt : LINE_COMMENT . non_if_stmt  (23)
	non_if_stmt : LINE_COMMENT .  (34)

	CALL  shift 3
	LP  shift 4
	EGG_IN  shift 5
	EGG_OUT  shift 6
	INT  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	CHAR  shift 10
	BOOL  shift 11
	FOR  shift 14
	WHILE  shift 15
	DO  shift 16
	VOID  shift 17
	POW  shift 18
	SQUARE_ROOT  shift 19
	IDENTIFIER  shift 20
	COMMENT  shift 21
	LINE_COMMENT  shift 22
	SEMICOLON  reduce 34
	ELSE  reduce 34

	non_if_stmt  goto 69
	loops  goto 28
	arithmetic_operations  goto 29
	function_call  goto 30
	function_declaration  goto 31
	declaration  goto 32
	initialization  goto 33
	declaration_and_initilization  goto 34
	input_stmt  goto 35
	output_stmt  goto 36
	while_loop  goto 37
	for_loop  goto 38
	do_while_loop  goto 39
	term  goto 40
	var  goto 41
	addition  goto 42
	subtraction  goto 43
	division  goto 44
	multiplication  goto 45
	modulo  goto 46
	power  goto 47
	sqrt  goto 48
	factor  goto 49
	types  goto 50
	function_types  goto 51


state 23
	program : BEGIN stmts . END  (1)

	END  shift 70
	.  error


state 24
	stmts : stmt .  (2)
	stmts : stmt . stmts  (3)

	CALL  shift 3
	LP  shift 4
	EGG_IN  shift 5
	EGG_OUT  shift 6
	INT  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	CHAR  shift 10
	BOOL  shift 11
	IF  shift 12
	ELIF  shift 13
	FOR  shift 14
	WHILE  shift 15
	DO  shift 16
	VOID  shift 17
	POW  shift 18
	SQUARE_ROOT  shift 19
	IDENTIFIER  shift 20
	COMMENT  shift 21
	LINE_COMMENT  shift 22
	RP  reduce 2
	RCB  reduce 2
	SEMICOLON  reduce 2
	END  reduce 2
	ELSE  reduce 2
	RETURN  reduce 2

	stmts  goto 71
	stmt  goto 24
	matched_stmt  goto 25
	unmatched_stmt  goto 26
	non_if_stmt  goto 27
	loops  goto 28
	arithmetic_operations  goto 29
	function_call  goto 30
	function_declaration  goto 31
	declaration  goto 32
	initialization  goto 33
	declaration_and_initilization  goto 34
	input_stmt  goto 35
	output_stmt  goto 36
	while_loop  goto 37
	for_loop  goto 38
	do_while_loop  goto 39
	term  goto 40
	var  goto 41
	addition  goto 42
	subtraction  goto 43
	division  goto 44
	multiplication  goto 45
	modulo  goto 46
	power  goto 47
	sqrt  goto 48
	factor  goto 49
	types  goto 50
	function_types  goto 51


state 25
	stmt : matched_stmt . SEMICOLON  (4)

	SEMICOLON  shift 72
	.  error


state 26
	stmt : unmatched_stmt . SEMICOLON  (5)

	SEMICOLON  shift 73
	.  error


27: shift/reduce conflict (shift 74, reduce 9) on SEMICOLON
state 27
	stmt : non_if_stmt . SEMICOLON  (6)
	matched_stmt : non_if_stmt .  (9)

	SEMICOLON  shift 74
	ELSE  reduce 9


state 28
	non_if_stmt : loops . non_if_stmt  (13)
	non_if_stmt : loops .  (24)

	CALL  shift 3
	LP  shift 4
	EGG_IN  shift 5
	EGG_OUT  shift 6
	INT  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	CHAR  shift 10
	BOOL  shift 11
	FOR  shift 14
	WHILE  shift 15
	DO  shift 16
	VOID  shift 17
	POW  shift 18
	SQUARE_ROOT  shift 19
	IDENTIFIER  shift 20
	COMMENT  shift 21
	LINE_COMMENT  shift 22
	SEMICOLON  reduce 24
	ELSE  reduce 24

	non_if_stmt  goto 75
	loops  goto 28
	arithmetic_operations  goto 29
	function_call  goto 30
	function_declaration  goto 31
	declaration  goto 32
	initialization  goto 33
	declaration_and_initilization  goto 34
	input_stmt  goto 35
	output_stmt  goto 36
	while_loop  goto 37
	for_loop  goto 38
	do_while_loop  goto 39
	term  goto 40
	var  goto 41
	addition  goto 42
	subtraction  goto 43
	division  goto 44
	multiplication  goto 45
	modulo  goto 46
	power  goto 47
	sqrt  goto 48
	factor  goto 49
	types  goto 50
	function_types  goto 51


state 29
	non_if_stmt : arithmetic_operations . non_if_stmt  (14)
	non_if_stmt : arithmetic_operations .  (25)

	CALL  shift 3
	LP  shift 4
	EGG_IN  shift 5
	EGG_OUT  shift 6
	INT  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	CHAR  shift 10
	BOOL  shift 11
	FOR  shift 14
	WHILE  shift 15
	DO  shift 16
	VOID  shift 17
	POW  shift 18
	SQUARE_ROOT  shift 19
	IDENTIFIER  shift 20
	COMMENT  shift 21
	LINE_COMMENT  shift 22
	SEMICOLON  reduce 25
	ELSE  reduce 25

	non_if_stmt  goto 76
	loops  goto 28
	arithmetic_operations  goto 29
	function_call  goto 30
	function_declaration  goto 31
	declaration  goto 32
	initialization  goto 33
	declaration_and_initilization  goto 34
	input_stmt  goto 35
	output_stmt  goto 36
	while_loop  goto 37
	for_loop  goto 38
	do_while_loop  goto 39
	term  goto 40
	var  goto 41
	addition  goto 42
	subtraction  goto 43
	division  goto 44
	multiplication  goto 45
	modulo  goto 46
	power  goto 47
	sqrt  goto 48
	factor  goto 49
	types  goto 50
	function_types  goto 51


state 30
	non_if_stmt : function_call . non_if_stmt  (15)
	non_if_stmt : function_call .  (26)

	CALL  shift 3
	LP  shift 4
	EGG_IN  shift 5
	EGG_OUT  shift 6
	INT  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	CHAR  shift 10
	BOOL  shift 11
	FOR  shift 14
	WHILE  shift 15
	DO  shift 16
	VOID  shift 17
	POW  shift 18
	SQUARE_ROOT  shift 19
	IDENTIFIER  shift 20
	COMMENT  shift 21
	LINE_COMMENT  shift 22
	SEMICOLON  reduce 26
	ELSE  reduce 26

	non_if_stmt  goto 77
	loops  goto 28
	arithmetic_operations  goto 29
	function_call  goto 30
	function_declaration  goto 31
	declaration  goto 32
	initialization  goto 33
	declaration_and_initilization  goto 34
	input_stmt  goto 35
	output_stmt  goto 36
	while_loop  goto 37
	for_loop  goto 38
	do_while_loop  goto 39
	term  goto 40
	var  goto 41
	addition  goto 42
	subtraction  goto 43
	division  goto 44
	multiplication  goto 45
	modulo  goto 46
	power  goto 47
	sqrt  goto 48
	factor  goto 49
	types  goto 50
	function_types  goto 51


state 31
	non_if_stmt : function_declaration . non_if_stmt  (16)
	non_if_stmt : function_declaration .  (27)

	CALL  shift 3
	LP  shift 4
	EGG_IN  shift 5
	EGG_OUT  shift 6
	INT  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	CHAR  shift 10
	BOOL  shift 11
	FOR  shift 14
	WHILE  shift 15
	DO  shift 16
	VOID  shift 17
	POW  shift 18
	SQUARE_ROOT  shift 19
	IDENTIFIER  shift 20
	COMMENT  shift 21
	LINE_COMMENT  shift 22
	SEMICOLON  reduce 27
	ELSE  reduce 27

	non_if_stmt  goto 78
	loops  goto 28
	arithmetic_operations  goto 29
	function_call  goto 30
	function_declaration  goto 31
	declaration  goto 32
	initialization  goto 33
	declaration_and_initilization  goto 34
	input_stmt  goto 35
	output_stmt  goto 36
	while_loop  goto 37
	for_loop  goto 38
	do_while_loop  goto 39
	term  goto 40
	var  goto 41
	addition  goto 42
	subtraction  goto 43
	division  goto 44
	multiplication  goto 45
	modulo  goto 46
	power  goto 47
	sqrt  goto 48
	factor  goto 49
	types  goto 50
	function_types  goto 51


state 32
	non_if_stmt : declaration . non_if_stmt  (17)
	non_if_stmt : declaration .  (28)

	CALL  shift 3
	LP  shift 4
	EGG_IN  shift 5
	EGG_OUT  shift 6
	INT  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	CHAR  shift 10
	BOOL  shift 11
	FOR  shift 14
	WHILE  shift 15
	DO  shift 16
	VOID  shift 17
	POW  shift 18
	SQUARE_ROOT  shift 19
	IDENTIFIER  shift 20
	COMMENT  shift 21
	LINE_COMMENT  shift 22
	SEMICOLON  reduce 28
	ELSE  reduce 28

	non_if_stmt  goto 79
	loops  goto 28
	arithmetic_operations  goto 29
	function_call  goto 30
	function_declaration  goto 31
	declaration  goto 32
	initialization  goto 33
	declaration_and_initilization  goto 34
	input_stmt  goto 35
	output_stmt  goto 36
	while_loop  goto 37
	for_loop  goto 38
	do_while_loop  goto 39
	term  goto 40
	var  goto 41
	addition  goto 42
	subtraction  goto 43
	division  goto 44
	multiplication  goto 45
	modulo  goto 46
	power  goto 47
	sqrt  goto 48
	factor  goto 49
	types  goto 50
	function_types  goto 51


state 33
	non_if_stmt : initialization . non_if_stmt  (18)
	non_if_stmt : initialization .  (29)

	CALL  shift 3
	LP  shift 4
	EGG_IN  shift 5
	EGG_OUT  shift 6
	INT  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	CHAR  shift 10
	BOOL  shift 11
	FOR  shift 14
	WHILE  shift 15
	DO  shift 16
	VOID  shift 17
	POW  shift 18
	SQUARE_ROOT  shift 19
	IDENTIFIER  shift 20
	COMMENT  shift 21
	LINE_COMMENT  shift 22
	SEMICOLON  reduce 29
	ELSE  reduce 29

	non_if_stmt  goto 80
	loops  goto 28
	arithmetic_operations  goto 29
	function_call  goto 30
	function_declaration  goto 31
	declaration  goto 32
	initialization  goto 33
	declaration_and_initilization  goto 34
	input_stmt  goto 35
	output_stmt  goto 36
	while_loop  goto 37
	for_loop  goto 38
	do_while_loop  goto 39
	term  goto 40
	var  goto 41
	addition  goto 42
	subtraction  goto 43
	division  goto 44
	multiplication  goto 45
	modulo  goto 46
	power  goto 47
	sqrt  goto 48
	factor  goto 49
	types  goto 50
	function_types  goto 51


state 34
	non_if_stmt : declaration_and_initilization . non_if_stmt  (19)
	non_if_stmt : declaration_and_initilization .  (30)

	CALL  shift 3
	LP  shift 4
	EGG_IN  shift 5
	EGG_OUT  shift 6
	INT  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	CHAR  shift 10
	BOOL  shift 11
	FOR  shift 14
	WHILE  shift 15
	DO  shift 16
	VOID  shift 17
	POW  shift 18
	SQUARE_ROOT  shift 19
	IDENTIFIER  shift 20
	COMMENT  shift 21
	LINE_COMMENT  shift 22
	SEMICOLON  reduce 30
	ELSE  reduce 30

	non_if_stmt  goto 81
	loops  goto 28
	arithmetic_operations  goto 29
	function_call  goto 30
	function_declaration  goto 31
	declaration  goto 32
	initialization  goto 33
	declaration_and_initilization  goto 34
	input_stmt  goto 35
	output_stmt  goto 36
	while_loop  goto 37
	for_loop  goto 38
	do_while_loop  goto 39
	term  goto 40
	var  goto 41
	addition  goto 42
	subtraction  goto 43
	division  goto 44
	multiplication  goto 45
	modulo  goto 46
	power  goto 47
	sqrt  goto 48
	factor  goto 49
	types  goto 50
	function_types  goto 51


state 35
	non_if_stmt : input_stmt . non_if_stmt  (20)
	non_if_stmt : input_stmt .  (31)

	CALL  shift 3
	LP  shift 4
	EGG_IN  shift 5
	EGG_OUT  shift 6
	INT  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	CHAR  shift 10
	BOOL  shift 11
	FOR  shift 14
	WHILE  shift 15
	DO  shift 16
	VOID  shift 17
	POW  shift 18
	SQUARE_ROOT  shift 19
	IDENTIFIER  shift 20
	COMMENT  shift 21
	LINE_COMMENT  shift 22
	SEMICOLON  reduce 31
	ELSE  reduce 31

	non_if_stmt  goto 82
	loops  goto 28
	arithmetic_operations  goto 29
	function_call  goto 30
	function_declaration  goto 31
	declaration  goto 32
	initialization  goto 33
	declaration_and_initilization  goto 34
	input_stmt  goto 35
	output_stmt  goto 36
	while_loop  goto 37
	for_loop  goto 38
	do_while_loop  goto 39
	term  goto 40
	var  goto 41
	addition  goto 42
	subtraction  goto 43
	division  goto 44
	multiplication  goto 45
	modulo  goto 46
	power  goto 47
	sqrt  goto 48
	factor  goto 49
	types  goto 50
	function_types  goto 51


state 36
	non_if_stmt : output_stmt . non_if_stmt  (21)
	non_if_stmt : output_stmt .  (32)

	CALL  shift 3
	LP  shift 4
	EGG_IN  shift 5
	EGG_OUT  shift 6
	INT  shift 7
	DOUBLE  shift 8
	STRING  shift 9
	CHAR  shift 10
	BOOL  shift 11
	FOR  shift 14
	WHILE  shift 15
	DO  shift 16
	VOID  shift 17
	POW  shift 18
	SQUARE_ROOT  shift 19
	IDENTIFIER  shift 20
	COMMENT  shift 21
	LINE_COMMENT  shift 22
	SEMICOLON  reduce 32
	ELSE  reduce 32

	non_if_stmt  goto 83
	loops  goto 28
	arithmetic_operations  goto 29
	function_call  goto 30
	function_declaration  goto 31
	declaration  goto 32
	initialization  goto 33
	declaration_and_initilization  goto 34
	input_stmt  goto 35
	output_stmt  goto 36
	while_loop  goto 37
	for_loop  goto 38
	do_while_loop  goto 39
	term  goto 40
	var  goto 41
	addition  goto 42
	subtraction  goto 43
	division  goto 44
	multiplication  goto 45
	modulo  goto 46
	power  goto 47
	sqrt  goto 48
	factor  goto 49
	types  goto 50
	function_types  goto 51


state 37
	loops : while_loop .  (35)

	.  reduce 35


state 38
	loops : for_loop .  (36)

	.  reduce 36


state 39
	loops : do_while_loop .  (37)

	.  reduce 37

